Fix: size and letter spacing for testimonial's header

--- a/sass/_line-item.scss
+++ b/sass/_line-item.scss
@@ -173,7 +173,9 @@ $desktop-img-path: "./images/desktop";
                 
                 width: 100vw;
 
-                font-size: 22.5px;
+                font-size: 17px;
+
+                letter-spacing: 4px;
 
             }            
 
